<resources>
    <string name="app_name">Event Dicoding</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="favorite">Favorite</string>
    <string name="image_logo">Image Logo</string>
    <string name="daftar">Daftar</string>
    <string name="titel">Titel</string>
    <string name="time">Time</string>
    <string name="kuota">Kuota</string>
    <string name="quota">%d tersisa</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="nama_penyelengggara">Nama Penyelengggara</string>
    <string name="nama_owner">Nama Owner</string>
    <string name="waktu_acara">Waktu Acara</string>
    <string name="jam_acara">Jam Acara</string>
    <string name="deskripsi">Deskripsi</string>
</resources>